package-res/reportviewer/reportviewer.css
* {
	overflow: hidden;
}

html, body {
	padding: 0px;
	margin:  0px;
	border:  0px;
  height:  100%;
}

.body {
	position: relative;
}

.table {
    border: 1px solid #808080;
}

/* PROMPT PANEL */
#toppanel {
	/* ATTENTION: do NOT remove this pixel.
	   It prevents collapsing of bottom margin of #reportControlPanel
	   with the margin of #toppanel,
	   in non-styled mode.
	   When this happens, 
	   because $ fails to detect the collapsing, 
	   the height measure of #toppanel does not account
	   for the margin of #reportControlPanel.
	*/
	padding: 0 0 1px 0;
}

#reportControlPanel {
  max-height: 370px;
  margin: 0px 10px 10px 10px;
  background-color: #d4d6db;
  border: 1px solid rgba(0, 0, 0, 0.59375);
}

.nonMobile.styled #reportControlPanel {
  margin: 0px 10px 0px 10px;
}

.mobile #reportControlPanel {
  margin: 0 0 10px 0;
}

div.prompt-panel {
  max-height: 300px;
}

/* CONTENT AREA */

/* The role of the report area is to show a scroll-bar, 
   at the right-most position of the report viewer. 
   Scroll-bar is only shown when .styled.
   
   Report area height is always set in code, 
   so as to fill all the space between the top-panel
   and the bottom of the document.
*/
#reportArea {
  position: relative;
  
  /* size to 100% of parent's width */
  display:  block;
  
  /* Ensure that child reportPageOutline is shown centered */
  text-align: center;
  
  padding: 0;
}

/* Report content is hidden by 
   absolutely positioning it off-page 
   to avoid flicker when size-polling.
   
   Also, cannot hide (visibility/display) a parent of 
   the iframe where a pdf is to be shown, or the pdf does not render (IE?).
   
   PRD-4271 Don't show white box rectangle...
   PRD-4018, PRD-4034 FF & IE8 does not resize properly when iframe is hidden.
*/
.contentHidden #reportArea {
	position: absolute;
	left: -100000;
    top:  -100000;
}

.styled #reportArea {
  padding: 8px 0;
}

.topViewer.styled #reportArea {
  overflow: auto;
}

#reportPageOutline {
  /* When unstyled, both width and height should be that of the parent */
  display: block;
  height:  100%;
}

.styled #reportPageOutline {
  /* Make the div horizontally fit to its content (inline-block).
  
     Being an inline element and having parent reportArea, 
     reportArea's "text-align:center" will center it.
   */
  display: inline-block;
  height:  auto;
}

#reportContent {
  display: block;
  background-color: #ffffff;
  width:  100%;
  height: 100%;
}	

.leafViewer.nonStyled #reportContent {
  /* Enables scrolling for the Text format (output-target: pageable/text).
  	 In PDFs, scrolling is always provided by the pdf viewer, 
  	 according to the iframe size,
  	 irrespective of our scrolling settings.
  */
  overflow: auto;
}

.styled #reportContent {
  /* In this case,
     both width and height are set by code, 
     so that the iframe fits the content's size
  */
  padding: 10px 10px 10px 2px;
  border: black 1px solid;
  overflow: inherit;
}

.styled.parentViewer #reportContent {
	padding: 0;
}

.hidden {
	display: none !important;
}

/* Debugging styles for report */
.debug #reportArea {
	border: solid 3px green;
}

.debug #reportPageOutline {
	border: solid 1px red;
}

.debug #reportContent {
	border: solid 3px yellow;
}


.dialog-content {
  height: auto;
}

.dijitDialogUnderlay { opacity: 0.0; cursor: wait;}

.tundra .dijitTabInnerDiv {
    padding-left: 3px;
    padding-right: 3px;
}

.tundra .dijitTooltipContainer {
    border: 0px;
    padding: 0px;
    background: none;
}

.tundra .dijitToolbar {
  height: 22px;
}

.plainDijitToolbar {
    background: none;
    border: 0px;
}

.dijitEditorIconParameters {
  background: url("../../common-ui/resources/themes/images/options.png") 1px 1px no-repeat !important;
}

.dijitTooltipBelow {
	/* leave room for arrow above content */
	padding-top: 25px;
}

.dijitTooltipAbove {
	/* leave room for arrow below content */
	padding-bottom: 14px;
}

.dijitTooltipABRight .dijitTooltipConnector {
	/* above or below tooltip, but the arrow appears on the right,
		and the right edges of target and tooltip are aligned rather than the left */
	left: auto !important;
	right: 10px;
}

.dijitTooltipBelow .dijitTooltipConnector {
	/* the arrow piece for tooltips below an element */
	top: 0;
	left: 5px;
	background:url("images/connector_top.png") no-repeat top left;
	width:36px;
	height:17px;
}

.dj_ie  .dijitTooltipBelow .dijitTooltipConnector {
	/* use gif for IE7 too, due to png rendering problems on fade-in (see http://trac.dojotoolkit.org/ticket/6555) */
	background-image: url("images/connector_top.gif");
}

.dijitTooltipAbove .dijitTooltipConnector {
	/* the arrow piece for tooltips above an element */
	bottom: 0;
	left: 5px;
	background:url("images/connector_bottom.png") no-repeat top left;
	width:36px;
	height:17px;
}

.dj_ie  .dijitTooltipAbove .dijitTooltipConnector {
	background-image: url("images/connector_bottom.gif");
}
.dj_ie6  .dijitTooltipAbove .dijitTooltipConnector {
	bottom: -3px;
}

.dijitTooltipLeft {
	padding-right: 14px;
}

.dijitTooltipLeft .dijitTooltipConnector {
	/* the arrow piece for tooltips to the left of an element, bottom borders aligned */
	right: 0;
	background:url("images/connector_right.png") no-repeat top left;
	width:17px;
	height:36px;
}

.dj_ie  .dijitTooltipLeft .dijitTooltipConnector {
	background-image: url("images/connector_right.gif");
}

.dijitTooltipRight {
	padding-left: 14px;
}

.dijitTooltipRight .dijitTooltipConnector {
	/* the arrow piece for tooltips to the right of an element, bottom borders aligned */
	left: 0;
	background:url("images/connector_left.png") no-repeat top left;
	width:17px;
	height:36px;
}

.tundra .dijitMenu,
.tundra .dijitMenuBar {
	border: 1px solid #000000;
	margin: 0;
	padding: 0;
	background-color: #ffffff;
}

.tundra .pentaho-MenuItemSelected {
	background-color: #ff0000;
	color:#fff;
}

.tundra .dijitMenuPassive .dijitMenuItemHover,
.tundra .dijitMenuItemSelected {
	background-color: #87df27;
	color:#000000;
}

.tundra .dijitTextBox {
  background-color: white;
}

.tundra .dijitCheckedMenuItemIcon {
	background-image: url('/pentaho-style/style/images/checkbox-empty.png');
	background-position: 0px;
}

.dj_ie6 .tundra .dijitCheckedMenuItemIcon {
	background-image: url('/pentaho-style/style/images/checkbox-empty.png');
}

.tundra .dijitCheckedMenuItemChecked .dijitCheckedMenuItemIcon {
	background-image: url('/pentaho-style/style/images/checkbox.png');
	background-position: 0px;
}

.selected {
    background-color: lime;
    color: #000000;
}

.closeIcon {
    width: 16px;
    height: 16px;
	background:url("../../../common-ui/resources/themes/images/close_sm_disabled.png") no-repeat;
    display:inline-block;
}

.closeIconHover {
    width: 16px;
    height: 16px;
    background:url("../../../common-ui/resources/themes/images/close_sm.png") no-repeat;
}

.pentaho-shadow-padding {
    padding-right: 8px; 
    padding-bottom: 8px;
}

